style ohri-home

--- a/src/hts/home/patient-tabs/ohri-patient-tabs.scss
+++ b/src/hts/home/patient-tabs/ohri-patient-tabs.scss
@@ -8,10 +8,11 @@
 }
 
 .tabContainer{
-  margin-top: 16px;
+  padding-top: 1rem;
   background-color: #ffffff;
-
+  padding-left: 1rem;
 }
+
 
 .tabContainer li button{
   width: 100% !important;
