--- a/src/ohri-home/ohri-home.scss
+++ b/src/ohri-home/ohri-home.scss
@@ -3,6 +3,6 @@
 .mainWrapper {
     max-width: 1440px;
     min-height: 100vh;
-    background-color: #ffffff;
-    padding: 16px !important;
+    background-color: #f4f4f4f4;
+    padding: 0px !important;
 }
