--- a/src/hts/home/welcome-section/hts-welcome-section.scss
+++ b/src/hts/home/welcome-section/hts-welcome-section.scss
@@ -1,3 +1,8 @@
+.container{
+background-color: #ffffff;
+padding: 0 1rem 0 1rem;
+}
+
 .welcome {
   font-size: 16px;
   font-stretch: normal;
@@ -7,7 +12,6 @@
   color: #525252;
   font-weight: 400;
   padding-bottom: 4px;
-
 }
 
 .welcomeDetails{
