--- a/src/forms/components/inputs/_input.scss
+++ b/src/forms/components/inputs/_input.scss
@@ -4,6 +4,9 @@
   margin-top: 10px;
 }
 
+.formField > div > div >label {
+  color: #525252 !important;
+}
 .ohriFormLabel {
   font-size: 0.75rem
 }
