--- a/src/forms/components/sidebar/ohri-form-sidebar.component.scss
+++ b/src/forms/components/sidebar/ohri-form-sidebar.component.scss
@@ -1,10 +1,37 @@
 @import "../../../root.scss";
 .sidebar{
 width: 11rem;
-// margin-left: 20px;
 margin-right: 20px;
 position: fixed;
 }
+
+.sidebarList{
+  max-Height: 100%;
+}
+
+@media all and (device-width: 600px) and (device-height: 1024px) and (orientation:portrait) { 
+  .sidebar{
+    width: 11rem;
+    max-height: 500px;
+    margin-right: 20px;
+    position: fixed;
+    }
+    
+    .sidebarList{
+      max-Height: 200px;
+      overflow-y: scroll;
+    }
+ }
+
+.link {
+  margin: 0.375rem 0 0.375rem 0.5rem;
+  font-size: 1rem;
+  line-height: 1.43;
+  letter-spacing: 0.16px;
+  color: #161616;
+  cursor: pointer;
+}
+
 
 .link {
   margin: 0.375rem 0 0.375rem 0.5rem;
