patient-list, home-screen, form-improvement

--- a/src/forms/components/page/_page.scss
+++ b/src/forms/components/page/_page.scss
@@ -7,6 +7,10 @@
   width: 95%;
 }
 
+.pageContent:last-child > hr {
+  display: none;
+}
+
 .pageTitle {
   font-size: 1.25rem;
   font-weight: 600;
