--- a/src/forms/_form.scss
+++ b/src/forms/_form.scss
@@ -1,15 +1,11 @@
 /* a container with flex-direction column */
 .mainContainer {
-  width: 100%;
-  height: 100%;
   display: flex;
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
   display: -webkit-flex;
-  margin: 0px;
   overscroll-behavior: contain;
-  position: fixed;
 }
 
 /* the fixed sidebar content */
@@ -19,23 +15,24 @@
   padding-left: 16px;
   width: 13rem;
   position: relative;
-  overflow: scroll;
   /* Necessary to become containing block for position: fixed child */
   transform: translate3d(0, 0, 0);
+  overscroll-behavior: contain;
+
 }
 
 /* the overflow content itself */
 .overflowContent {
-  height: inherit;
+  height: 100vh;
   margin: 0px;
   padding: 0px;
   flex-basis: 75%;
   flex-grow: 1;
   flex-shrink: 1;
   position: relative;
-  overflow: scroll;
+  overflow-y: scroll;
   overscroll-behavior: contain;
-  padding-bottom: 40rem;
+  padding-bottom: 100rem;
   padding-left: 5px;
 }
 
