wip form render test ui

--- a/src/forms/form-render/form-render.scss
+++ b/src/forms/form-render/form-render.scss
@@ -113,3 +113,8 @@
 .finalJsonSchema {
   border: 0.01rem dotted #6f6f6f !important;
 }
+
+.json-render-textarea {
+  background-color: #141414 !important;
+  color: #c6c6c6 !important;
+}
