wip form render test ui

--- a/src/forms/form-render/form-render.scss
+++ b/src/forms/form-render/form-render.scss
@@ -83,3 +83,8 @@
   overflow-y: scroll;
   padding-left: 10px;
 }
+
+.json-render-textarea {
+  background-color: #141414 !important;
+  color: #c6c6c6 !important;
+}
