--- a/src/forms/components/inputs/_input.scss
+++ b/src/forms/components/inputs/_input.scss
@@ -132,3 +132,17 @@
     font-size: 12px;
     color: $color-gray-70;
 }
+
+.obsGroupColumn > div {
+  margin-top: 0 !important;
+}
+
+/** Targets carbon's multiselect */
+.obsGroupColumn > div > div > div {
+  max-width: 18rem !important;
+}
+
+/** Targets carbon's dropdown */
+.obsGroupColumn > div > div > div > div {
+  max-width: 18rem !important;
+}
