--- a/src/forms/components/inputs/_input.scss
+++ b/src/forms/components/inputs/_input.scss
@@ -139,3 +139,17 @@
 .errorLegend legend, .errorLabel label {
     color: #da1e28
 } 
+
+.obsGroupColumn > div {
+  margin-top: 0 !important;
+}
+
+/** Targets carbon's multiselect */
+.obsGroupColumn > div > div > div {
+  max-width: 18rem !important;
+}
+
+/** Targets carbon's dropdown */
+.obsGroupColumn > div > div > div > div {
+  max-width: 18rem !important;
+}
