OHRI-274 form render UI changes

--- a/src/forms/form-render/form-render.scss
+++ b/src/forms/form-render/form-render.scss
@@ -114,7 +114,7 @@
   border: 0.01rem dotted #6f6f6f !important;
 }
 
-.json-render-textarea {
-  background-color: #141414 !important;
-  color: #c6c6c6 !important;
+.txtArea > div div textarea {
+  //background-color: #1f1d1d !important;
+  //color: #c6c6c6 !important;
 }
