form render test intellisense

--- a/src/forms/form-render/form-render.scss
+++ b/src/forms/form-render/form-render.scss
@@ -118,3 +118,14 @@
   //background-color: #1f1d1d !important;
   //color: #c6c6c6 !important;
 }
+
+.userWelcome {
+  font-size: 25px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.29;
+  letter-spacing: normal;
+  color: #161616;
+  margin-bottom: 16px;
+}
