--- a/src/forms/form-render/form-render.scss
+++ b/src/forms/form-render/form-render.scss
@@ -70,7 +70,7 @@
   //color: #c6c6c6 !important;
 }
 
-.userWelcome {
+.formRenderTitle {
   font-size: 25px;
   font-weight: normal;
   font-stretch: normal;
