--- a/src/forms/form-render/form-render.scss
+++ b/src/forms/form-render/form-render.scss
@@ -98,34 +98,7 @@
   border-right: 1em;
 }
 
-.renderColumn > div > form,
-.renderColumn > div > .finalJsonSchema {
+.renderColumn > div > form {
   margin: -1rem;
-  margin-top: -0.5rem;
-}
-
-.renderColumn > div > form .renderDropdown {
-  padding-top: 0.8rem;
-  width: 400px;
-}
-
-.jsonEditor,
-.finalJsonSchema {
-  border: 0.01rem dotted #6f6f6f !important;
-}
-
-.txtArea > div div textarea {
-  //background-color: #1f1d1d !important;
-  //color: #c6c6c6 !important;
-}
-
-.formRenderTitle {
-  font-size: 25px;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1.29;
-  letter-spacing: normal;
-  color: #161616;
-  margin-bottom: 16px;
+  margin-top: 0.1rem;
 }
