adds padding above form dropdown and adds borders on editor

--- a/src/forms/form-render/form-render.scss
+++ b/src/forms/form-render/form-render.scss
@@ -103,3 +103,13 @@
   margin: -1rem;
   margin-top: -0.5rem;
 }
+
+.renderColumn > div > form .renderDropdown {
+  padding-top: 0.8rem;
+  width: 400px;
+}
+
+.jsonEditor,
+.finalJsonSchema {
+  border: 0.01rem dotted #6f6f6f !important;
+}
