--- a/src/forms/components/page/_page.scss
+++ b/src/forms/components/page/_page.scss
@@ -1,14 +1,20 @@
+@import "../../../root.scss";
+
 .divider {
   background-color: rgba(107, 104, 104, 0.5);
-  // margin: 1rem 0 1rem 0;
-  margin: 0;
-  margin-top: 25px;
-  margin-bottom: 25px;
-  width: 95%;
+  margin: 25px 0;
+  //width: 95%;
 }
 
 .pageContent:last-child > hr {
   display: none;
+}
+
+.pageHeader {
+  display: flex;
+  flex-direction: row;
+  padding-top: 15px;
+  padding-bottom: 10px;
 }
 
 .pageTitle {
@@ -29,11 +35,19 @@
 }
 
 .formSection {
-  // flex-shrink: 1;
   flex: 1 1 65%;
-  background-color: #f4f4f4;
 }
 
 .formSection > div > fieldset {
   margin-bottom: 0 !important;
+}
+
+.collapseToggle {
+  margin-Left: -180px;
+  margin-bottom: 20px;
+  margin-top: -10px;
+}
+
+.sectionContent > div {
+  background-color: $ui-01;
 }
