--- a/src/dashboard.scss
+++ b/src/dashboard.scss
@@ -3,7 +3,7 @@
 }
 
 .noMarker button {
-  background-color: #e5e5e5 !important;
+  background-color: #f5f5f5 !important;
 }
 
 .noMarker ul li a {
@@ -11,7 +11,7 @@
 }
 
 .currentNavItem > a {
-  background-color: #e0e0e0 !important;
+  background-color: #f5f5f5 !important;
   color: #161616 !important;
   border-left-color: #005d5d !important;
 }
@@ -19,3 +19,4 @@
 .hide {
   display: none;
 }
+
