--- a/src/dashboard.scss
+++ b/src/dashboard.scss
@@ -1,9 +1,17 @@
 .noMarker {
-    list-style-type: none;
+  list-style-type: none;
+}
+
+.noMarker button {
+  background-color: #f5f5f5 !important;
+}
+
+.noMarker ul li a {
+  padding-left: 40px !important;
 }
 
 .currentNavItem > a {
-  background-color: #e0e0e0 !important;
+  background-color: #f5f5f5 !important;
   color: #161616 !important;
   border-left-color: #005d5d !important;
 }
@@ -11,3 +19,4 @@
 .hide {
   display: none;
 }
+
