--- a/src/forms/components/inputs/_input.scss
+++ b/src/forms/components/inputs/_input.scss
@@ -125,10 +125,23 @@
 
 .errorLegend legend, .errorLabel label {
   color: #da1e28;
-  font-size: 0.875rem !important;
 }
 
 .unspecified > div label {
     font-size: 12px;
     color: $color-gray-70;
+}
+
+.obsGroupColumn > div {
+  margin-top: 0 !important;
+}
+
+/** Targets carbon's multiselect */
+.obsGroupColumn > div > div > div {
+  max-width: 18rem !important;
+}
+
+/** Targets carbon's dropdown */
+.obsGroupColumn > div > div > div > div {
+  max-width: 18rem !important;
 }
