Feature/ohri 209 form engine (#430)
* Add group obs files

* Introduce repeat control

* Update HTS form json

* Fix submission of null obsgroups

* Construct repeating obs groups from encounter

* Fix intermittent issue related to value binding with the Multiselect control

* Add support for voiding obsgroup and other improvements

* OHRI-274 Form Render UX Improvements

* wip form render test ui

* More improvements to make things work :pray:

* OHRI-274 form render UI changes

* form render test intellisense

* renames class

* design review changes

* adds json editor theme selector and adds media queries

* adds intellisense to final schema output

* Fix submission of empty obsgroups and comprehensive support of 'Unspecified' within obsgroups :surfer:

* filterFormByIntent preprocessor to support nested questions :rocket: (#371)

* Fix lists not loading in Homescreens (#381)

* Skip patterns to support iterables :hammer: (#396)

* Disabled and Hidden fields should not be validated (#401)

* OHRI-276 collapsing form sections clean (#427)

* OHRI-276 collapsing form sections

* collapsable form sections

* adds missing action to collapse all sections

* OHRI-276 apply design changes

* changes field background to white

* removes horizontal divider and adds bottom border to fields

* fixes rebase issues

Co-authored-by: Samuel Male <samuelsmalek@gmail.com>
Co-authored-by: pirupius <piruville@gmail.com>

--- a/src/forms/components/inputs/_input.scss
+++ b/src/forms/components/inputs/_input.scss
@@ -1,12 +1,14 @@
 @import "../../../root.scss";
-.formField{
+
+.formField {
   padding-bottom: 18px;
   margin-top: 10px;
 }
 
-.formField > div > div >label {
+.formField > div > div > label {
   color: #525252 !important;
 }
+
 .ohriFormLabel {
   font-size: 0.75rem
 }
@@ -16,25 +18,34 @@
 }
 
 .formInputField {
-    @extend .formField;
-    width: auto;
+  @extend .formField;
+  width: auto;
 }
 
-.formInputField > div > div > label{
-    max-width: auto;
+.formInputField > div > div > label {
+  max-width: auto;
 }
 
 .formInputField > div > div > div {
-    width: $ohri-input-width !important;
+  width: $ohri-input-width !important;
 }
 
-.dropDownOverride{
-    width: auto;
-    padding-bottom: 15px;
+.multiselectOverride {
+  width: auto;
+  padding-bottom: 15px;
 }
 
-.dropDownOverride > div > div{
-    width: $ohri-input-width !important;
+.multiselectOverride > div > div {
+  width: $ohri-input-width !important;
+}
+
+.multiselectOverride > div div div input {
+  border: 0 !important;
+  border-bottom: 1px solid #8d8d8d !important;
+}
+
+.dropDownOverride > div div button {
+  border-bottom: 1px solid #8d8d8d !important;
 }
 
 .numberInputWrapper :global(.bx--number) {
@@ -112,11 +123,11 @@
   width: $ohri-input-width;
 }
 
-.textInputOverrides label { 
+.textInputOverrides label {
   font-size: 0.875rem !important;
 }
 
-.unspecified{
+.unspecified {
   margin-top: -13px;
 }
 
@@ -132,13 +143,13 @@
 }
 
 .unspecified > div label {
-    font-size: 12px;
-    color: $color-gray-70;
+  font-size: 12px;
+  color: $color-gray-70;
 }
 
-.errorLegend legend, .errorLabel label {
-    color: #da1e28
-} 
+.errorLegend legend, .errorLabel label { 
+  color: #da1e28
+}
 
 .obsGroupColumn > div {
   margin-top: 0 !important;
