--- a/src/forms/components/page/_page.scss
+++ b/src/forms/components/page/_page.scss
@@ -1,3 +1,5 @@
+@import "../../../root.scss";
+
 .divider {
   background-color: rgba(107, 104, 104, 0.5);
   // margin: 1rem 0 1rem 0;
@@ -11,6 +13,13 @@
   display: none;
 }
 
+.pageHeader {
+  display: flex;
+  flex-direction: row;
+  padding-top: 15px;
+  padding-bottom: 10px;
+}
+
 .pageTitle {
   font-size: 1.25rem;
   font-weight: 600;
@@ -19,7 +28,7 @@
   width: 100%;
 }
 
-.required{
+.required {
   margin: 0.25rem 27rem 0.5rem 0;
   font-size: 0.875rem;
   line-height: 1.29;
@@ -29,10 +38,26 @@
 }
 
 .formSection {
-  // flex-shrink: 1;
   flex: 1 1 65%;
 }
 
 .formSection > div > fieldset {
   margin-bottom: 0 !important;
+}
+
+.collapseToggle {
+  margin-Left: -180px;
+  margin-bottom: 20px;
+  margin-top: -10px;
+}
+
+.sectionContent > div {
+  background-color: $ui-01;
+}
+
+.formSection > div div div input,
+.formSection > div div div textarea,
+.formSection > div div div dropdown,
+.formSection > div div div button {
+  background-color: #ffffff !important;
 }
