--- a/src/forms/components/sidebar/ohri-form-sidebar.component.scss
+++ b/src/forms/components/sidebar/ohri-form-sidebar.component.scss
@@ -1,28 +1,32 @@
 @import "../../../root.scss";
-.sidebar{
-width: 11rem;
-margin-right: 2rem;
-margin-left: 1rem;
-overscroll-behavior: contain;
+
+.sidebar {
+  width: 12rem;
+  margin-right: 1.5rem;
+  overscroll-behavior: contain;
 }
 
-.sidebarList{
+.sidebarList {
   max-Height: 100%;
 }
 
-@media all and (device-width: 600px) and (device-height: 1024px) and (orientation:portrait) { 
-  .sidebar{
+.sidenavActions {
+  margin-left: 0.6rem;
+}
+
+@media all and (device-width: 600px) and (device-height: 1024px) and (orientation: portrait) {
+  .sidebar {
     width: 11rem;
     max-height: 500px;
     margin-right: 20px;
     position: fixed;
-    }
-    
-    .sidebarList{
-      max-Height: 200px;
-      overflow-y: scroll;
-    }
- }
+  }
+
+  .sidebarList {
+    max-Height: 200px;
+    overflow-y: scroll;
+  }
+}
 
 .link {
   margin: 0.375rem 0 0.375rem 0.5rem;
@@ -44,11 +48,11 @@ overscroll-behavior: contain;
 }
 
 .link:hover {
-    outline: none;
+  outline: none;
 }
 
 // Sidebar-Section
-.sidebarSection{
+.sidebarSection {
   border-left: 0.5rem solid #9ef0f0;
   height: auto;
   margin: 0.122rem 0 0.122rem;
@@ -76,7 +80,7 @@ overscroll-behavior: contain;
   cursor: pointer;
 }
 
-.sidebarSectionLink{
+.sidebarSectionLink {
   font-size: 0.875rem;
   font-stretch: normal;
   font-style: normal;
