--- a/src/dashboard.scss
+++ b/src/dashboard.scss
@@ -2,18 +2,17 @@
   list-style-type: none;
 }
 
-.noMarker button {
-  background-color: #f5f5f5 !important;
-}
-
 .noMarker ul li a {
-  padding-left: 40px !important;
+  padding-left: 40px !important; 
+  font: lighter  ;
+  
 }
 
 .currentNavItem > a {
-  background-color: #f5f5f5 !important;
+  background-color: #cecece !important;
   color: #161616 !important;
   border-left-color: #005d5d !important;
+  font: bolder ;
 }
 
 .hide {
