Feature/ohri 271 covid patient chart sync OHRI-282 Patient chart submenu look and feel (#445)
* Add group obs files

* Introduce repeat control

* Update HTS form json

* Fix submission of null obsgroups

* Construct repeating obs groups from encounter

* Fix intermittent issue related to value binding with the Multiselect control

* Add support for voiding obsgroup and other improvements

* More improvements to make things work :pray:

* OHRI-274 form render UI changes

* OHRI-257 Delete Date of assesssment question

* form render test intellisense

* renames class

* List of Pending Lab Results

* remove fontSize from error

* design review changes

* Fix covid home page :blush:

* adds json editor theme selector and adds media queries

* More improvements, fix propagation of HIV results

* Load encounters and HIV statuses in parallel

* adds intellisense to final schema output

* Fix submission of empty obsgroups and comprehensive support of 'Unspecified' within obsgroups :surfer:

* filterFormByIntent preprocessor to support nested questions :rocket: (#373)

* OHRI-229 clinical visit form new concepts

* edit obsGroups behaviours

* Edit group id

* Render Yes, No concepts

* WIP clinical visit concepts

* adds padding above form dropdown and adds borders on editor

* Add Vaccination, outcome widget, actions column

* OHRI-257 remove 'other' validation as per spec

* Fix lists not loading in Homescreens (#380)

* OHRI-257 fix typescript error

* Update node.js.yml

* Update PR trigger, remove pre-release next action

* Update 'All COVID clients' columns to use actual values (#386)

* Update columns to use actual values

* Update columns of 'Undocumented Outcomes' list and other enhancements (#387)

* Update columns of 'Undocumented Outcomes' list and other enhancements

* Update form namespaces

* OHRI-259 Re-order sideNav, fix title (#384)

* Re-order sideNav, fix title

* Updated

--- a/src/forms/components/page/_page.scss
+++ b/src/forms/components/page/_page.scss
@@ -2,11 +2,7 @@
 
 .divider {
   background-color: rgba(107, 104, 104, 0.5);
-  // margin: 1rem 0 1rem 0;
-  margin: 0;
-  margin-top: 25px;
-  margin-bottom: 25px;
-  width: 95%;
+  margin: 25px 0;
 }
 
 .pageContent:last-child > hr {
