--- a/src/forms/components/inputs/_input.scss
+++ b/src/forms/components/inputs/_input.scss
@@ -2,7 +2,7 @@
 
 .formField {
   padding-bottom: 18px;
-  margin-top: 10px;
+  margin-top: 10px; // should this be changes to 24px?
 }
 
 .formField > div > div > label {
