--- a/src/forms/components/page/_page.scss
+++ b/src/forms/components/page/_page.scss
@@ -12,8 +12,7 @@
 .pageHeader {
   display: flex;
   flex-direction: row;
-  padding-top: 15px;
-  padding-bottom: 10px;
+  margin: 24px 0 24px 0;
 }
 
 .pageTitle {
