Polish stylings specific to the obs group controls (#476)

--- a/src/forms/components/inputs/_input.scss
+++ b/src/forms/components/inputs/_input.scss
@@ -150,6 +150,10 @@
   color: #da1e28
 }
 
+.obsGroupColumn {
+  max-width: 18rem;
+}
+
 .obsGroupColumn > div {
   margin-top: 0 !important;
 }
@@ -163,3 +167,9 @@
 .obsGroupColumn > div > div > div > div {
   max-width: 18rem !important;
 }
+
+.repeatContentWrapper {
+  margin-top: 0.65rem;
+  margin-bottom: 2rem;
+}
+
