--- a/src/forms/components/section/_section.scss
+++ b/src/forms/components/section/_section.scss
@@ -1,6 +1,6 @@
-.section{
-    border-radius: solid 1px rgba(107, 104, 104, 0.5);
-    margin-bottom: 3.063rem;
+.section {
+  border-radius: solid 1px rgba(107, 104, 104, 0.5);
+  margin-bottom: 3.063rem;
 }
 
 .sectionTitle {
@@ -9,10 +9,22 @@
   font-weight: 600;
   line-height: 1.38;
   color: #525252;
-  margin-bottom:0.5rem;
+  margin-bottom: 0.5rem;
 }
 
-.container {
+.sectionContainer {
   margin-top: 1.438rem;
   width: 90%;
+}
+
+.questionOverrides {
+  //margin-top: 14px;
+}
+
+.sectionContainer :global(.bx--fieldset) {
+  margin-bottom: 0;
+}
+
+.sectionContainer > div {
+  margin-bottom: 1rem;
 }
