OHRI-309 replace intent dropdown with overflow menu

--- a/src/hts/care-and-treatment/service-enrolment/service-enrolment-list.scss
+++ b/src/hts/care-and-treatment/service-enrolment/service-enrolment-list.scss
@@ -29,7 +29,7 @@
 }
 
 .toggleButtons {
-  padding-right: 2rem;
+  //padding-right: 2rem;
 }
 
 .widgetContainer :global(.bx--data-table) thead th button span {
