OHRI-320 match question label and answer font-size

--- a/src/forms/_form.scss
+++ b/src/forms/_form.scss
@@ -32,6 +32,10 @@
   padding: 0 0 100rem 5px;
 }
 
+.mainContainer :global(.bx--label) {
+  font-size: .875rem;
+}
+
 @media (max-width: 1024px) {
   .sidebar {
     margin: 0;
