--- a/src/forms/components/sidebar/ohri-form-sidebar.component.scss
+++ b/src/forms/components/sidebar/ohri-form-sidebar.component.scss
@@ -2,8 +2,9 @@
 
 .sidebar {
   width: 12rem;
-  //padding: 0 0 109px;
-  min-height: 8rem;
+  //margin-right: 1.5rem;
+  margin: 1px 0 15px;
+  padding: 0 0 109px;
   overscroll-behavior: contain;
   margin: 1px 13px 15px 0;
 }
