--- a/src/forms/components/sidebar/ohri-form-sidebar.component.scss
+++ b/src/forms/components/sidebar/ohri-form-sidebar.component.scss
@@ -2,10 +2,10 @@
 
 .sidebar {
   width: 12rem;
-  //margin-right: 1.5rem;
-  margin: 1px 0 15px; //margin-right 6px
-  padding: 0 0 109px;
+  //padding: 0 0 109px;
+  min-height: 8rem;
   overscroll-behavior: contain;
+  margin: 1px 13px 15px 0;
 }
 
 .sidebarList {
@@ -89,4 +89,8 @@
   line-height: 1.43;
   letter-spacing: 0.16px;
   color: #161616;
+}
+
+.sideBarHorizontalLine {
+  margin-top: 1.5rem;
 }
