Add support for readonly

--- a/src/forms/components/inputs/_input.scss
+++ b/src/forms/components/inputs/_input.scss
@@ -17,6 +17,10 @@
   width: $ohri-input-width !important;
 }
 
+.disabledLabelOverrides label {
+  color: #525252 !important;
+}
+
 .formInputField {
   @extend .formField;
   width: auto;
