Adding tooltip to input components

--- a/src/forms/components/inputs/_input.scss
+++ b/src/forms/components/inputs/_input.scss
@@ -177,33 +177,12 @@
   margin-bottom: 2rem;
 }
 
-.tooltip .tooltipText {
-  visibility: hidden;
-  width: 120px;
-  background-color: black;
-  color: #fff;
-  text-align: center;
-  border-radius: 6px;
-  padding: 5px 0;
-  position: absolute;
-  z-index: 100000;
-  bottom: 150%;
-  left: 50%;
-  margin-left: -60px;
+.ohriLabel {
+  width: auto !important;
 }
 
-.tooltip .tooltipText::after {
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  margin-left: -5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: black transparent transparent transparent;
-}
-
-.tooltip:hover .tooltipText {
-  visibility: visible;
-  color: #0f62fe;
+.ohriLabel :global(.bx--assistive-text) {
+  max-width: 30rem !important;
+  font-size: 0.75rem;
+  white-space: pre-line !important;
 }
