--- a/src/ohri-dashboard/ohri-dashboard.scss
+++ b/src/ohri-dashboard/ohri-dashboard.scss
@@ -1,16 +1,22 @@
 @import "../root.scss";
 
-.sideNav {
-    padding-top: 2rem;
+.noMarker {
+  list-style-type: none;
 }
 
-.dashboardText {
-    font-size: 14px;
-    padding: 0.5rem 1rem 0.5rem;
+.noMarker ul li a {
+  padding-left: 40px !important;
+  font: lighter  ;
+
 }
 
-.sideNav :global(a.bx--side-nav__link[aria-current=page]:before),
-.sideNav :global(.bx--side-nav__submenu[aria-expanded=false]:before)
-{
-    background-color: $brand-teal-01;
+.currentNavItem > a {
+  background-color: #cecece !important;
+  color: #161616 !important;
+  border-left-color: #005d5d !important;
+  font: bolder ;
+}
+
+.hide {
+  display: none;
 }
