--- a/src/components/patient-banner/patient-banner.scss
+++ b/src/components/patient-banner/patient-banner.scss
@@ -1,42 +1,14 @@
 @import "../../root.scss";
 
-.headerWrapper {
-    width: 100%;
-    display: flex;
-    height: 5.5rem;
-    top: 48px;
-    position:sticky;
-    background: #ffffff;
-    z-index: -1;
-    border-bottom: 1px solid #c6c6c6;
+.patientBannerContainer {
+  display: flex;
+  width: 100%;
+  position:sticky;
+  flex-direction: row;
+  align-items: baseline;
+  padding: 0;
 }
 
-.row {
-    display: flex;
-    flex-direction: row;
-    align-items: baseline;
-}
-
-
-/*
-* Demographics
-*/
-.demo {
-    width: 50%;
-    margin-left: 1rem;
-    margin-top: 10px;
-}
-
-.name {
-    margin: 0 8.375rem 0.5rem 0;
-    font-family: "IBM Plex Sans";
-    font-size: 1.4rem;
-    line-height: 1.5;
-    color: #161616;
-}
-
-.details {
-    font-size: 1.2rem;
-    color: #525252;
-    font-family: "IBM Plex Sans";
+.patientBannerContainer > div {
+  width: 100%;
 }
