--- a/src/components/patient-banner/patient-banner.scss
+++ b/src/components/patient-banner/patient-banner.scss
@@ -2,13 +2,49 @@
 
 .patientBannerContainer {
   display: flex;
-  width: 100%;
-  position:sticky;
+  position:fixed;
   flex-direction: row;
   align-items: baseline;
   padding: 0;
+  width: 86.6%;
 }
 
 .patientBannerContainer > div {
   width: 100%;
+}
+
+@media only screen and (max-width: 600px) {
+  .patientBannerContainer {
+    width: 73%;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  .patientBannerContainer {
+    width: 73%;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .patientBannerContainer {
+    width: 78%;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .patientBannerContainer {
+    width: 80%;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .patientBannerContainer {
+    width: 79%;
+  }
+}
+
+@media only screen and (min-width: 1440px) {
+  .patientBannerContainer {
+    width: 86.6%;
+  }
 }
