--- a/src/forms/ohri-form.scss
+++ b/src/forms/ohri-form.scss
@@ -13,18 +13,26 @@
   overflow-y: hidden;
 }
 
+.ohriFormContainer :global(.bx--label) {
+  font-size: .875rem;
+}
+
 .formContent {
   margin: 0;
   flex-basis: 65%;
   flex-grow: 1;
   flex-shrink: 1;
   position: relative;
-  overflow-y: auto;
-  //padding: 0 0 15rem 5px;
+  overflow-y: hidden;
+  flex-direction: column;
 }
 
-.ohriFormContainer :global(.bx--label) {
-  font-size: .875rem;
+.formContentBody {
+  overflow-y: auto;
+  height: 77.5vh;
+  margin-top: 122px;
+  position: fixed;
+  width: 86.6%;
 }
 
 @media only screen and (max-width: 640px) {
@@ -32,29 +40,22 @@
 }
 
 @media (max-width: 768px) {
-  .sidebar {
-  }
-
-  .formContent {
-  }
   .ohriFormContainer {
     height: 100vh;
+  }
+  .formContentBody {
+    // width: 82.2%;
   }
 }
 
 @media (max-width: 1024px) {
-  .sidebar {
-
-  }
-
-  .formContent {
+  .formContentBody {
+    // width: 82.2%;
   }
 }
 
 @media (max-width: 1440px) {
-  .sidebar {
-  }
+  .formContentBody {
 
-  .formContent {
   }
 }
