--- a/src/forms/ohri-form.scss
+++ b/src/forms/ohri-form.scss
@@ -24,38 +24,63 @@
   flex-shrink: 1;
   position: relative;
   overflow-y: hidden;
+  display: flex;
   flex-direction: column;
 }
 
 .formContentBody {
   overflow-y: auto;
   height: 77.5vh;
-  margin-top: 122px;
-  position: fixed;
-  width: 86.6%;
-}
-
-@media only screen and (max-width: 640px) {
-  //
+  // margin-top: 122px;
+  // position: fixed;
+  // width: 86.6%;
+  width: inherit;
 }
 
 @media (max-width: 768px) {
   .ohriFormContainer {
     height: 100vh;
   }
+}
+
+@media only screen and (max-width: 600px) {
   .formContentBody {
-    // width: 82.2%;
+    // width: 73%;
   }
 }
 
-@media (max-width: 1024px) {
+@media only screen and (min-width: 600px) {
   .formContentBody {
-    // width: 82.2%;
+    // width: 73%;
   }
 }
 
-@media (max-width: 1440px) {
+@media only screen and (min-width: 768px) {
   .formContentBody {
+    // width: 78%;
+  }
+}
 
+@media only screen and (min-width: 992px) {
+  .formContentBody {
+    // width: 80%;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .formContentBody {
+    // width: 79%;
+  }
+}
+
+@media only screen and (min-width: 1300px) {
+  .formContentBody {
+    // width: 85.6%;
+  }
+}
+
+@media only screen and (min-width: 1440px) {
+  .formContentBody {
+    // width: 84.7%;
   }
 }
